ffi/lt.h

typedef struct lt_session lt_session;
typedef enum {
    LT_OK = 0,
    LT_ERR_ARG,
    LT_ERR_ENGINE,
    LT_ERR_IO,
    LT_ERR_NOT_FOUND,
    LT_ERR_BUFFER_TOO_SMALL
} lt_err;
/* —— 会话生命周期（2）—— */
lt_err lt_session_new(const char* save_path, const char* session_id, lt_session** out);
void   lt_session_free(lt_session* s);
lt_err lt_err_str(lt_session* s, char* buf, size_t cap, size_t* out_len); /* 最近一次错误人类可读 */
/* —— 全局网络策略（代理 + 速率）——
   proxy_type: 0=none 1=socks4 2=socks5 3=socks5+pw 4=http 5=http+pw（对齐 settings_pack）
   proxy_host/proxy_user/proxy_pass 可 NULL；proxy_port 忽略当 type=0。
   down_bytes/up_bytes: ≤0 表示不修改该项（bytes/s；0 本身 = 不限速）。 */
lt_err lt_apply_network(lt_session* s,
                        int proxy_type, const char* proxy_host, int proxy_port,
                        const char* proxy_user, const char* proxy_pass,
                        int64_t down_bytes, int64_t up_bytes);
/* —— 发现层开关（DHT / LSD / UPnP / PEX）——
   四个开关独立设置（0=关 1=开）；enable_upnp 同时控制 enable_natpmp
   （端口映射族同进退，不提供单独 NAT-PMP 开关）。
   enable_pex 特殊：内核 2.0.x 无会话级 settings_pack 开关（PEX 默认开）——
   置 0 时会话记录意图，对其后新增任务注入 per-torrent disable_pex flag
   （不回溯既有任务；daemon 在任务装配前 apply 故覆盖全部任务）。
   会话默认 DHT/LSD/UPnP 全关、PEX 开（M0 确定性语义，见 lt_session_new）；
   本函数后置覆盖。 */
lt_err lt_apply_discovery(lt_session* s, int enable_dht, int enable_lsd, int enable_upnp,
                          int enable_pex);
/* —— 传输层开关（uTP / MSE 加密）——
   enable_utp 同时控制 enable_incoming_utp/enable_outgoing_utp
   （uTP 族同进退，不提供单向开关）。
   enc_policy: 0=禁用（纯明文）1=允许（明文+MSE 皆收，内核默认）2=强制（仅加密）。
   allowed_enc_level / prefer_rc4 不在此暴露（保持内核默认 pe_both/false）；
   会话默认 uTP 关 + 加密允许（M0 确定性语义）；本函数后置覆盖。 */
lt_err lt_apply_transport(lt_session* s, int enable_utp, int enc_policy);
/* —— 会话连接参数（监听端口 / 全局连接数上限）——
   port: 0 = 不修改（沿用内核默认/上次设置）；>0 时 listen_interfaces =
   "0.0.0.0:<port>,[::]:<port>"（IPv4+IPv6 双栈；apply_settings 后内核自动
   re-listen，运行中调用安全）。
   max_connections: 0 = 不修改（内核默认 200）；>0 时 connections_limit。 */
lt_err lt_apply_conn(lt_session* s, int port, int max_connections);
/* —— 添加/移除（5）—— */
lt_err lt_add_magnet(lt_session* s, const char* magnet, const char** web_seeds, char* ih_out /*41 字节*/);
lt_err lt_add_torrent_file(lt_session* s, const uint8_t* meta, size_t len, const char** web_seeds, char* ih_out);
lt_err lt_add_torrent_resume(lt_session* s, const uint8_t* resume_data, size_t len, const char** web_seeds, char* ih_out);
lt_err lt_pause(lt_session* s, const char* ih);   /* 完成即停；同步点 = torrent_paused alert（D19/D32） */
lt_err lt_resume(lt_session* s, const char* ih);
lt_err lt_remove(lt_session* s, const char* ih, int delete_data);
/* —— 状态/进度查询（6）—— */
typedef struct {
    int     state;             /* libtorrent torrent_status::state；0 下载 1 完成 3 错误 4 元数据获取中。
                                  ABI100 无 paused 状态/无 flags_t：暂停以后续 torrent_paused alert 为同步点
                                  （状态停在暂停前值），暂停态由引擎层维护（§10.1 验证结论）。 */
    float   progress;          /* 0..1（已下载/总字节，metadata 前恒 0） */
    int64_t downloaded, total, down_rate, up_rate;
    int     num_peers, num_seeds;   /* 已连接数（F2） */
    int     metadata_received;      /* F2 三阶段评估前提 */
    int     paused;                 /* torrent_handle::pause() 后的 paused 标志 */
    char    name[256];         /* E28: torrent 名（metadata 就绪前为空串；NUL 结尾，
                                  截断安全——内核侧 strncpy + 预置 memset） */
    int64_t all_time_download, /* E33: 全生命周期累计下行（含历史，随 resume data
                                  持久；>= 本次 done——hashfail/断点重复收字节计入） */
            all_time_upload;   /* E33: 全生命周期累计上行（做种贡献；暂停不清零） */
} lt_torrent_status;
#define LT_PEER_SEED          (1u << 0)
#define LT_PEER_UPLOADER      (1u << 1) /* upload_only */
#define LT_PEER_INTERESTED    (1u << 2)
#define LT_PEER_CHOKED        (1u << 3) /* 我们 choke 对方 */
#define LT_PEER_REMOTE_CHOKED (1u << 4) /* 对方 choke 我们 */
#define LT_PEER_SNUBBED       (1u << 5)
#define LT_PEER_CONNECTING    (1u << 6)
#define LT_PEER_LOCAL         (1u << 7) /* outgoing 连接 */
#define LT_PEER_UTP           (1u << 8)