crates/btcore/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_CXX26: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const _ARM_WINAPI_PARTITION_DESKTOP_SDK_AVAILABLE: u32 = 1;
pub const _CRT_BUILD_DESKTOP_APP: u32 = 1;
pub const _ARGMAX: u32 = 100;
pub const _CRT_INT_MAX: u32 = 2147483647;
pub const _CRT_FUNCTIONS_REQUIRED: u32 = 1;
pub const _CRT_HAS_CXX17: u32 = 0;
pub const _CRT_HAS_C11: u32 = 1;
pub const _CRT_INTERNAL_NONSTDC_NAMES: u32 = 1;
pub const __STDC_SECURE_LIB__: u32 = 200411;
pub const __GOT_SECURE_LIB__: u32 = 200411;
pub const __STDC_WANT_SECURE_LIB__: u32 = 1;
pub const _SECURECRT_FILL_BUFFER_PATTERN: u32 = 254;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES: u32 = 1;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub const LT_PEER_SEED: u32 = 1;
pub const LT_PEER_UPLOADER: u32 = 2;
pub const LT_PEER_INTERESTED: u32 = 4;
pub const LT_PEER_CHOKED: u32 = 8;
pub const LT_PEER_REMOTE_CHOKED: u32 = 16;
pub const LT_PEER_SNUBBED: u32 = 32;
pub const LT_PEER_CONNECTING: u32 = 64;
pub const LT_PEER_LOCAL: u32 = 128;
pub const LT_PEER_UTP: u32 = 256;
pub type va_list = *mut ::std::os::raw::c_char;
unsafe extern "C" {
    pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
unsafe extern "C" {
    pub fn __security_init_cookie();
}
unsafe extern "C" {
    pub fn __security_check_cookie(_StackCookie: usize);
}
unsafe extern "C" {
    pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
unsafe extern "C" {
    pub static mut __security_cookie: usize;
}
pub type __crt_bool = bool;
unsafe extern "C" {
    pub fn _invalid_parameter_noinfo();
}
unsafe extern "C" {
    pub fn _invalid_parameter_noinfo_noreturn() -> !;
}
unsafe extern "C" {
    pub fn _invoke_watson(
        _Expression: *const wchar_t,
        _FunctionName: *const wchar_t,
        _FileName: *const wchar_t,
        _LineNo: ::std::os::raw::c_uint,
        _Reserved: usize,
    ) -> !;
}
pub type errno_t = ::std::os::raw::c_int;
pub type wint_t = ::std::os::raw::c_ushort;
pub type wctype_t = ::std::os::raw::c_ushort;
pub type __time32_t = ::std::os::raw::c_long;
pub type __time64_t = ::std::os::raw::c_longlong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data_public {
    pub _locale_pctype: *const ::std::os::raw::c_ushort,
    pub _locale_mb_cur_max: ::std::os::raw::c_int,
    pub _locale_lc_codepage: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __crt_locale_data_public"]
        [::std::mem::size_of::<__crt_locale_data_public>() - 16usize];
    ["Alignment of __crt_locale_data_public"]
        [::std::mem::align_of::<__crt_locale_data_public>() - 8usize];
    ["Offset of field: __crt_locale_data_public::_locale_pctype"]
        [::std::mem::offset_of!(__crt_locale_data_public, _locale_pctype) - 0usize];
    ["Offset of field: __crt_locale_data_public::_locale_mb_cur_max"]
        [::std::mem::offset_of!(__crt_locale_data_public, _locale_mb_cur_max) - 8usize];
    ["Offset of field: __crt_locale_data_public::_locale_lc_codepage"]
        [::std::mem::offset_of!(__crt_locale_data_public, _locale_lc_codepage) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_pointers {
    pub locinfo: *mut __crt_locale_data,
    pub mbcinfo: *mut __crt_multibyte_data,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __crt_locale_pointers"][::std::mem::size_of::<__crt_locale_pointers>() - 16usize];
    ["Alignment of __crt_locale_pointers"]
        [::std::mem::align_of::<__crt_locale_pointers>() - 8usize];
    ["Offset of field: __crt_locale_pointers::locinfo"]
        [::std::mem::offset_of!(__crt_locale_pointers, locinfo) - 0usize];
    ["Offset of field: __crt_locale_pointers::mbcinfo"]
        [::std::mem::offset_of!(__crt_locale_pointers, mbcinfo) - 8usize];
};
pub type _locale_t = *mut __crt_locale_pointers;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Mbstatet {
    pub _Wchar: ::std::os::raw::c_ulong,
    pub _Byte: ::std::os::raw::c_ushort,
    pub _State: ::std::os::raw::c_ushort,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Mbstatet"][::std::mem::size_of::<_Mbstatet>() - 8usize];
    ["Alignment of _Mbstatet"][::std::mem::align_of::<_Mbstatet>() - 4usize];
    ["Offset of field: _Mbstatet::_Wchar"][::std::mem::offset_of!(_Mbstatet, _Wchar) - 0usize];
    ["Offset of field: _Mbstatet::_Byte"][::std::mem::offset_of!(_Mbstatet, _Byte) - 4usize];
    ["Offset of field: _Mbstatet::_State"][::std::mem::offset_of!(_Mbstatet, _State) - 6usize];
};
pub type mbstate_t = _Mbstatet;
pub type time_t = __time64_t;
pub type rsize_t = usize;
unsafe extern "C" {
    pub fn _errno() -> *mut ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn _set_errno(_Value: ::std::os::raw::c_int) -> errno_t;
}
unsafe extern "C" {
    pub fn _get_errno(_Value: *mut ::std::os::raw::c_int) -> errno_t;
}
unsafe extern "C" {
    pub fn __threadid() -> ::std::os::raw::c_ulong;
}
unsafe extern "C" {
    pub fn __threadhandle() -> usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lt_session {
    _unused: [u8; 0],
}
pub const lt_err_LT_OK: lt_err = 0;
pub const lt_err_LT_ERR_ARG: lt_err = 1;
pub const lt_err_LT_ERR_ENGINE: lt_err = 2;
pub const lt_err_LT_ERR_IO: lt_err = 3;
pub const lt_err_LT_ERR_NOT_FOUND: lt_err = 4;
pub const lt_err_LT_ERR_BUFFER_TOO_SMALL: lt_err = 5;
pub type lt_err = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn lt_session_new(
        save_path: *const ::std::os::raw::c_char,
        session_id: *const ::std::os::raw::c_char,
        out: *mut *mut lt_session,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_session_free(s: *mut lt_session);
}
unsafe extern "C" {
    pub fn lt_err_str(
        s: *mut lt_session,
        buf: *mut ::std::os::raw::c_char,
        cap: usize,
        out_len: *mut usize,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_apply_network(
        s: *mut lt_session,
        proxy_type: ::std::os::raw::c_int,
        proxy_host: *const ::std::os::raw::c_char,
        proxy_port: ::std::os::raw::c_int,
        proxy_user: *const ::std::os::raw::c_char,
        proxy_pass: *const ::std::os::raw::c_char,
        down_bytes: i64,
        up_bytes: i64,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_apply_discovery(
        s: *mut lt_session,
        enable_dht: ::std::os::raw::c_int,
        enable_lsd: ::std::os::raw::c_int,
        enable_upnp: ::std::os::raw::c_int,
        enable_pex: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_apply_transport(
        s: *mut lt_session,
        enable_utp: ::std::os::raw::c_int,
        enc_policy: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_apply_conn(
        s: *mut lt_session,
        port: ::std::os::raw::c_int,
        max_connections: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_magnet(
        s: *mut lt_session,
        magnet: *const ::std::os::raw::c_char,
        web_seeds: *mut *const ::std::os::raw::c_char,
        ih_out: *mut ::std::os::raw::c_char,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_torrent_file(
        s: *mut lt_session,
        meta: *const u8,
        len: usize,
        web_seeds: *mut *const ::std::os::raw::c_char,
        ih_out: *mut ::std::os::raw::c_char,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_torrent_resume(
        s: *mut lt_session,
        resume_data: *const u8,
        len: usize,
        web_seeds: *mut *const ::std::os::raw::c_char,
        ih_out: *mut ::std::os::raw::c_char,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_pause(s: *mut lt_session, ih: *const ::std::os::raw::c_char) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_resume(s: *mut lt_session, ih: *const ::std::os::raw::c_char) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_remove(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        delete_data: ::std::os::raw::c_int,
    ) -> lt_err;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lt_torrent_status {
    pub state: ::std::os::raw::c_int,
    pub progress: f32,
    pub downloaded: i64,
    pub total: i64,
    pub down_rate: i64,
    pub up_rate: i64,
    pub num_peers: ::std::os::raw::c_int,
    pub num_seeds: ::std::os::raw::c_int,
    pub metadata_received: ::std::os::raw::c_int,
    pub paused: ::std::os::raw::c_int,
    pub name: [::std::os::raw::c_char; 256usize],
    pub all_time_download: i64,
    pub all_time_upload: i64,
}
